--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3"
 networks:
     portal:
         driver: bridge
+    mongo:
+        driver: bridge
         
 services:
     phpfpm:
@@ -54,3 +56,19 @@ services:
             - portal
         ports:
             - 8082:80
+            
+            
+    mongodb:
+        container_name: portal_mongodb
+        image: mongo
+        networks:
+            - mongo
+
+    feedback-manager:
+        container_name: portal_feedback_manager
+        image: citadeltechnologies/feedback-manager
+        env_file:
+            - portal.env
+        networks:
+            - portal
+            - mongo
