--- a/portal.dist.env
+++ b/portal.dist.env
@@ -5,3 +5,7 @@ MYSQL_USER=portal
 MYSQL_PASSWORD=portal
 
 NGINX_ENABLED_VHOST=local.portal.com
+
+MONGO_DBNAME=portal_feedbacks
+MONGO_HOST=portal_mongodb
+MONGO_PORT=27017
