--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -28,13 +28,18 @@ services:
         resource: '../../src/AppBundle/Controller'
         public: true
         tags: ['controller.service_arguments']
+        
+    AppBundle\Manager\:
+        resource: '../../src/AppBundle/Manager'
+        public: true
 
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+    
 
     AppBundle\Gateway\FeedbackGateway:
+        public: true
         arguments:
-            $apiUrl: "%project.feedback.api_url%"
-            
+            - "%project.feedback.api_url%"
