Implement registration subscriber to redirect properly the user after successful registration

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -43,3 +43,7 @@ services:
         public: true
         arguments:
             - "%project.feedback.api_url%"
+            
+    AppBundle\Subscriber\RegistrationSubscriber:
+        tags:
+            - { name: kernel.event_subscriber }
