--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,7 +5,8 @@ security:
         FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
+        ROLE_DEVELOPER:   ROLE_USER
+        ROLE_ADMIN:       ROLE_DEVELOPER
         ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     providers:
