move docker-compose from portal to game-docker

--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,10 @@
 /vendor/
 /web/bundles/
 /nbproject
-portal.env
 /volumes
 rsa_vault/*
 !rsa_vault/.gitkeep
 *.DS_Store
 *.sublime-workspace
+rsa_vault/*
+!rsa_vault.gitkeep
