--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,6 +22,10 @@ security:
                 default_target_path: dashboard
             logout:       true
             anonymous:    true
+            remember_me:
+                secret:   '%secret%'
+                lifetime: 604800 # 1 week in seconds
+                path:     /
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
