--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -17,4 +17,5 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
+    discord.bot.url: 'http://discord_bot'
     project.feedback.api_url: http://portal_feedback_manager
