--- a/.env.dist
+++ b/.env.dist
@@ -26,4 +26,4 @@ MAILER_NAME=local.kalaxia.com
 ###< symfony/swiftmailer-bundle ###
 
 PROJECT_FEEDBACK_API_URL=http://portal_feedback_manager
-DISCORD_BOT_URL=http://portal_discord_bot
+DISCORD_BOT_URL=http://discord_bot
