--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 
 script:
   - mkdir -p build/logs
-  - php vendor/bin/phpunit --coverage-text --coverage-clover build/logs/clover.xml
+  - php bin/phpunit --coverage-text --coverage-clover build/logs/clover.xml
   
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
