--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
             "Tests\\": "tests/"
         }
     },
+    "minimum-stability": "dev",
     "require": {
         "php": ">=7",
         "doctrine/doctrine-bundle": "^1.9",
@@ -23,7 +24,7 @@
         "doctrine/orm": "^2.6",
         "friendsofsymfony/user-bundle": "^2.1",
         "guzzlehttp/guzzle": "^6.3",
-        "kalaxia/scrumban-bundle": "^0.1.0",
+        "kalaxia/scrumban-bundle": "dev-feature/trello-webhook",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
@@ -45,6 +46,12 @@
         "symfony/test-pack": "^1.0",
         "symfony/var-dumper": "^4.1"
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/Kalaxia/ScrumbanBundle"
+        }
+    ],
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
