--- a/.env.dist
+++ b/.env.dist
@@ -27,3 +27,6 @@ MAILER_NAME=local.kalaxia.com
 
 PROJECT_FEEDBACK_API_URL=http://portal_feedback_manager
 DISCORD_BOT_URL=http://discord_bot
+
+TRELLO_API_KEY=key
+TRELLO_API_TOKEN=token
