Implement JWT bundle and webservices to get player servers

--- a/.env.dist
+++ b/.env.dist
@@ -27,3 +27,8 @@ MAILER_NAME=local.kalaxia.com
 
 PROJECT_FEEDBACK_API_URL=http://portal_feedback_manager
 DISCORD_BOT_URL=http://discord_bot
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=7bfb30b1619f155b538a83176a18282b
+###< lexik/jwt-authentication-bundle ###
