--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "doctrine/orm": "^2.6",
         "friendsofsymfony/user-bundle": "^2.1",
         "guzzlehttp/guzzle": "^6.3",
-        "kalaxia/scrumban-bundle": "dev-feature/trello-webhook",
+        "kalaxia/scrumban-bundle": "~0.1",
+        "lexik/jwt-authentication-bundle": "^2.0@dev",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
@@ -46,12 +47,6 @@
         "symfony/test-pack": "^1.0",
         "symfony/var-dumper": "^4.1"
     },
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/Kalaxia/ScrumbanBundle"
-        }
-    ],
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
