--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -19,3 +19,6 @@ fos_user_resetting:
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
+
+api_login_check:
+    path: /api/login_check
