--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,18 +1,17 @@
----
+# see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
-    #esi: ~
-    secret: '%env(resolve:APP_SECRET)%'
-    csrf_protection: ~
-    templating:
-        engines: ['twig']
-    default_locale: '%locale%'
-    trusted_hosts: ~
+    secret: '%env(APP_SECRET)%'
+    #csrf_protection: true
+    #http_method_override: true
+
+    # Enables session support. Note that the session will ONLY be started if you read or write from it.
+    # Remove or comment this section to explicitly disable session support.
     session:
-        # https://symfony.com/doc/current/reference/configuration/framework.html#handler-id
-        handler_id: session.handler.native_file
-        save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
-    fragments: ~
-    http_method_override: true
-    assets: ~
+        handler_id: null
+        cookie_secure: auto
+        cookie_samesite: lax
+
+    #esi: true
+    #fragments: true
     php_errors:
         log: true
