--- a/config/packages/test/framework.yaml
+++ b/config/packages/test/framework.yaml
@@ -1,7 +1,4 @@
----
 framework:
-    test: ~
+    test: true
     session:
-        storage_id: 'session.storage.mock_file'
-    profiler:
-        collect: false
+        storage_id: session.storage.mock_file
