--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/asset": "^5.1",
         "symfony/console": "^5.1",
         "symfony/flex": "^1.0",
+        "symfony/intl": "^5.1",
         "symfony/monolog-bundle": "^3.6",
         "symfony/security-bundle": "^5.1",
         "symfony/swiftmailer-bundle": "^3.5",
