--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/asset": "^5.1",
         "symfony/console": "^5.1",
         "symfony/flex": "^1.0",
+        "symfony/form": "^5.1",
         "symfony/intl": "^5.1",
         "symfony/monolog-bundle": "^3.6",
         "symfony/security-bundle": "^5.1",
@@ -39,6 +40,7 @@
     },
     "require-dev": {
         "symfony/dotenv": "^5.1",
+        "symfony/maker-bundle": "^1.22",
         "symfony/phpunit-bridge": "^5.1",
         "symfony/profiler-pack": "^1.0",
         "symfony/test-pack": "^1.0",
