--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,11 +34,8 @@ services:
         env_file:
             - portal.env
         volumes:
-            # applications
             - "./:/srv/app"
-            # nginx
-            - "./volumes/ssl:/etc/ssl"
-            - "./volumes/logs:/var/log/nginx"
+            - "./var/log:/var/log/nginx"
         networks:
             - portal
         ports:
@@ -53,4 +50,4 @@ services:
         networks:
             - portal
         volumes:
-            - "./volumes/mysql:/var/lib/mysql"
+            - "./var/data:/var/lib/mysql"
