--- a/.env
+++ b/.env
@@ -34,3 +34,5 @@ MAILER_URL=null://localhost
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+ITCH_API_KEY=key
