Implement HTTP Client dependency and Itch helper commands

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=7",
+        "ext-json": "*",
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/migrations": "^3.0",
