--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symfony/console": "^5.2",
         "symfony/flex": "^1.0",
         "symfony/form": "^5.2",
+        "symfony/http-client": "^5.2",
         "symfony/intl": "^5.2",
         "symfony/monolog-bundle": "^3.6",
         "symfony/security-bundle": "^5.2",
